# arty-demo

./: .env.example  .gitignore  .mdformat-ignore  .pre-commit-config.yaml  .secrets.baseline  README.md  _quarto.yml  expansion-scope.md  project_scope.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agent-memory/model-reviewer/: MEMORY.md  (+21 more)
.claude/agents/: librarian.md  model-reviewer.md  modeler.md  notebook-author.md
.claude/hooks/: check_agent_memory.py
.claude/rules/: agents-routing.md  git-flow.md  significant-decisions.md  subagent-harness.md
app/: sensitivity.py
doc-reference/motts-equation/: index.md
doc-reference/wound-ballistics/: index.md
doc-reference/ww2-shells/: index.md
docs/modeler-notes/: target-area-profile-derivation.md
experiment/fragmentation-field/: _background.qmd  _change-log.qmd  _field-plots.qmd  _four-zone-3d.qmd  _governing-equations.qmd  _implementation.qmd  _lethal-density.qmd  _limitations.qmd  _parameters.qmd  _pkill-field.qmd  _validation.qmd  fragmentation-field.qmd
openspec/: config.yaml
src/arty/: fragmentation.py  plots.py  shells.py  zones.py
src/utils/: claude-utils.py  elsevier-xml-processor.py  pdf-processor.py  settings.py
tests/: conftest.py  test_elsevier_xml_processor.py  test_familyA_false_safe_zone.py  test_field_builder_perf.py  test_fragmentation.py  test_lethal_density_volume.py  test_pdf_processor.py  test_pkill_field.py  test_plots.py  test_vectorized_equivalence.py  test_zones.py
tests/elsevier-xml-sample/: mott-vrh-thermistor.xml
tests/inputs/: sample-formulas-formatting.md
(+142 files in other folders)
