[project]
name = "arty-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mdformat-gfm>=1.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit real files on disk"]
