[project]
name = "arty-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "google-genai>=1.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pillow>=11.0.0",
    "plotly>=6.0.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "streamlit>=1.45.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mdformat-frontmatter>=2.0.10",
    "mdformat-gfm>=1.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[tool.mdformat]
number = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit real files on disk"]
